kubernetes/project-03-k8s/grafana-demo.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
  name: grafana-demo
  namespace: project-03-k8s
spec:
  rules:
  - host: grafana-demo.apps.cluster-01.gke.lsd.co.za
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-demo
          servicePort: 3000
